--- a/css/style.css
+++ b/css/style.css
@@ -169,6 +169,13 @@ textarea {
     transform: scale(1.05);
 }
 
+.contact-form p {
+    font-size: 1rem;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    line-height: normal;
+}
 
 /*** Footer ***/
 footer {
