Prefixes added, work files deleted

--- a/css/queries.css
+++ b/css/queries.css
@@ -41,6 +41,9 @@
     
     main {
         width: 100%;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
         flex-flow: row wrap;
     }
     
@@ -175,7 +178,11 @@
     
     /* Mobile navi */
     nav {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-pack: end;
+        -ms-flex-pack: end;
         justify-content: flex-end;
     }
     
@@ -207,6 +214,9 @@
     
     main {
         width: 100%;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
         flex-flow: row wrap;
     }
     
@@ -341,7 +351,11 @@
     
     /* Mobile navi */
     nav {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-pack: end;
+        -ms-flex-pack: end;
         justify-content: flex-end;
     }
     
