--- a/css/queries.css
+++ b/css/queries.css
@@ -1,4 +1,7 @@
 @media screen and (max-width: 1307px) {
+    nav {
+        flex-basis: 50%;
+    }
     
     h1 {
         font-size: 10rem;
@@ -15,6 +18,10 @@
 }
 
 @media screen and (max-width: 1040px) {
+    nav {
+        flex-basis: 55%;
+    }
+    
     
     h1 {
         font-size: 8rem;
